--- a/locales/tr.json
+++ b/locales/tr.json
@@ -6,11 +6,7 @@
   "navigation.home": "Ana Sayfa",
   "navigation.biography": "Biyografi",
   "navigation.books": "Kitaplar",
-  "navigation.lessons": "Dersler",
-  "navigation.poems": "Şiirler",
-  "navigation.contact": "İletişim",
-  "navigation.search": "Ara",
-  "navigation.searchPlaceholder": "Arama...",
+  "navigation.media": "Şeyh'in Videoları",
   "navigation.menu": "Menü",
   "navigation.auto": "otomatik",
 
