--- a/locales/ar.json
+++ b/locales/ar.json
@@ -6,11 +6,7 @@
   "navigation.home": "الرئيسية",
   "navigation.biography": "السيرة الذاتية",
   "navigation.books": "الكتب",
-  "navigation.lessons": "الدروس",
-  "navigation.poems": "القصائد",
-  "navigation.contact": "اتصل بنا",
-  "navigation.search": "بحث",
-  "navigation.searchPlaceholder": "ابحث هنا...",
+  "navigation.media": "مقاطع الشيخ",
   "navigation.menu": "القائمة",
   "navigation.auto": "تلقائي",
 
@@ -41,7 +37,7 @@
 
   "home.contribute.title": "المساهمة في الأرشيف",
   "home.contribute.description": "ساعدنا في الحفاظ على هذه المجموعة وتوسيعها من خلال مشاركة المواد والترجمات أو الذكريات المتعلقة بالشيخ [الاسم].",
-  "home.contribute.button": "اتصل بنا",
+  "home.contribute.button": "تواصل معنا",
 
   "footer.siteTitle": "تراث الشيخ",
   "footer.tagline": "مخصص للحفاظ على ومشاركة حكمة وإسهامات الشيخ [الاسم].",
