--- a/locales/ar.json
+++ b/locales/ar.json
@@ -53,7 +53,7 @@
   "footer.connect.title": "تواصل",
   "footer.connect.contact": "اتصل بنا",
 
-  "back-to-home": "الرجوع للصفحة الرئيسية",
+  "back-to-home": "العودة للصفحة الرئيسية",
   "biography.timeline": "الخط الزمني",
 
   "books.title": "الكتب",
