--- a/locales/ar.json
+++ b/locales/ar.json
@@ -41,7 +41,7 @@
 
   "footer.siteTitle": "تراث الشيخ",
   "footer.tagline": "مخصص للحفاظ على ومشاركة حكمة وإسهامات الشيخ [الاسم].",
-  "footer.copyright": "مشروع تراث الشيخ. جميع الحقوق محفوظة.",
+  "footer.copyright": "إعداد محمد عبدالرحمن البورنو",
 
   "footer.explore.title": "استكشاف",
   "footer.explore.home": "الرئيسية",
