--- a/locales/tr.json
+++ b/locales/tr.json
@@ -41,7 +41,7 @@
 
   "footer.siteTitle": "Şeyh Mirası",
   "footer.tagline": "Şeyh [İsim]'in bilgeliğini ve katkılarını korumaya ve paylaşmaya adanmıştır.",
-  "footer.copyright": "Şeyh Mirası Projesi. Tüm hakları saklıdır.",
+  "footer.copyright": "Hazırlayan: Muhammed Abdurrahman El-Borno",
 
   "footer.explore.title": "Keşfet",
   "footer.explore.home": "Ana Sayfa",
