--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,6 +1,7 @@
 {
   "metadata.title": "تراث الشيخ",
-  "metadata.description": "أرشيف رقمي لحياة وكتب ومعلقات شيخ ومعلم ووالد عظيم.",
+  "metadata.description": "تراث الشيخ محمد صدقي البورنو، أرشيف رقمي لحياة وكتب ومعلقات شيخ ومعلم ووالد عظيم.",
+
   "metadata.title.biography": "سيرة الشيخ",
   "metadata.description.biography": "سيرة وعلم الشيخ محمد صدقي البورنو.",
 
@@ -40,15 +41,15 @@
   "home.about.description": "كان الشيخ محمد صدقي البورنو (1930 - 2025) عالماً مشهوراً ومؤلفاً ومرشداً روحياً كرس حياته لخدمة العلم والدين.",
   "home.about.button": "قراءة السيرة الكاملة",
   "home.about.quote.text": "أدخل اقتباساً بارزاً من الشيخ يعبر عن حكمته ووجهة نظره.",
-  "home.about.quote.author": "الشيخ [الاسم]",
+  "home.about.quote.author": "الشيخ محمد صدقي البورنو",
   "home.about.quote.source": "من [مصدر الاقتباس]",
 
   "home.contribute.title": "المساهمة في الأرشيف",
-  "home.contribute.description": "ساعدنا في الحفاظ على هذه المجموعة وتوسيعها من خلال مشاركة المواد والترجمات أو الذكريات المتعلقة بالشيخ [الاسم].",
+  "home.contribute.description": "ساعدنا في الحفاظ على هذه المجموعة وتوسيعها من خلال مشاركة المواد والترجمات أو الذكريات المتعلقة بالشيخ محمد صدقي البورنو.",
   "home.contribute.button": "تواصل معنا",
 
   "footer.siteTitle": "تراث الشيخ",
-  "footer.tagline": "مخصص للحفاظ على ومشاركة حكمة وإسهامات الشيخ [الاسم].",
+  "footer.tagline": "مخصص للحفاظ على ومشاركة حكمة وإسهامات الشيخ محمد صدقي البورنو.",
   "footer.copyright": "إعداد محمد عبدالرحمن البورنو",
 
   "footer.explore.title": "استكشاف",
