--- a/locales/tr.json
+++ b/locales/tr.json
@@ -1,6 +1,6 @@
 {
   "metadata.title": "Şeyh Mirası",
-  "metadata.description": "Saygıdeğer bir alim ve manevi rehberin hayatı, öğretileri ve edebi katkılarının dijital arşivi.",
+  "metadata.description": "Şeyh Muhammed Sedki El-Borno'nun mirası, büyük bir şeyh, öğretmen ve baba olan kişinin hayatı, kitapları ve anekdotlarından oluşan dijital bir arşivdir.",
 
   "metadata.title.biography": "Biyografi",
   "metadata.description.biography": "Şeyh Muhammed Sidki EL-Borno'nun Hayatı ve İlmi",
