--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,15 +1,19 @@
 {
   "metadata.title": "تراث الشيخ",
   "metadata.description": "تراث الشيخ محمد صدقي البورنو، أرشيف رقمي لحياة وكتب ومعلقات شيخ ومعلم ووالد عظيم.",
+  "metadata.keywords": "شيخ محمد صدقي البورنو, دكتور محمد صدقي البورنو, العلامة محمد صدقي البورنو, محمد صدقي البورنو الغزي, محمد صدقي, محمد صدقي البورنو أبو الحارث, موسوعة القواعد الفقهية, الوجيز في إيضاح قواعد الفقه الكلية, الشيخ محمد صدقي البورنو, فقه إسلامي, أصول الفقه, فقه أهل السنة والجماعة, دراسات إسلامية, فقه إسلامي شامل, الكتب الإسلامية, علماء غزة, كتب أصول الفقه, فقه إسلامي شامل, كتب الشيخ محمد صدقي البورنو, إسهامات الشيخ محمد صدقي البورنو, الشريعة الإسلامية, علم أصول الفقه, الفقه الكلي, الإسلام, الفقه, أبحاث إسلامية, شيخ غزة, شيخ أصول الفقه, علماء فلسطين, سيرة الشيخ محمد صدقي البورنو, التعليم الإسلامي, موسوعة فقهية, دراسات أكاديمية إسلامية, تفسيرات أصول الفقه, فقه القواعد الفقهية, فقه السنّة, قصائد الشيخ محمد صدقي البورنو",
 
   "metadata.title.biography": "سيرة الشيخ",
   "metadata.description.biography": "سيرة وعلم الشيخ محمد صدقي البورنو.",
+  "metadata.keywords.biography": "سيرة الشيخ محمد صدقي البورنو, حياة الشيخ محمد صدقي البورنو, الشيخ محمد صدقي, الشيخ محمد صدقي البورنو أبو الحارث, علماء غزة, علماء فلسطين, تاريخ الشيخ محمد صدقي, مراجع فقهية, سيرة ذاتية للشيخ محمد صدقي",
 
   "metadata.title.books": "كتب الشيخ",
   "metadata.description.books": "اكتشف كتب العلامة الدكتور محمد صدقي البورنو في أصول الفقه، الشيخ الجليل الذي ترك بصمة واضحة في هذا العلم من خلال مؤلفاته القيمة والمؤثرة",
+  "metadata.keywords.books": "محمد صدقي البورنو, كتب الشيخ, كتب العلامة الدكتور محمد صدقي البورنو, الغزّي, أبو الحارث, آل بورنو, موسوعة القواعد الفقهية, الوجيز في إيضاح قواعد الفقه الكلية, أصول الفقه, مؤلفات الشيخ محمد صدقي البورنو, كتب إسلامية, فقه إسلامي, دراسات إسلامية, علم أصول الفقه, فقه أهل السنة والجماعة",
 
   "metadata.title.media": "مقاطع الشيخ",
   "metadata.description.media": "بوابة للمقاطع المرئية التي تشمل سلاسل علمية ونصوصًا شعرية مسجلة للشيخ محمد صدقي البورنو",
+  "metadata.keywords.media": "مقاطع الشيخ محمد صدقي البورنو, دروس الشيخ محمد صدقي, محاضرات فقهية, مقاطع إسلامية, مقاطع علمية, سلاسل علمية, قصائد الشيخ محمد صدقي البورنو, دروس في أصول الفقه, مقاطع فيديو إسلامية",
 
   "navigation.siteTitle": "تراث الشيخ",
   "navigation.home": "الرئيسية",
